fix document scrollbar

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -1,7 +1,7 @@
 @import url(fonts.css)
 
 html
-    overflow hidden
+    overflow auto
 
 body
     font-family 'roboto'
